tEffects library and aQueue isolated for all ports (jQuery, yui3). Partly fixed shadow jumping bug

--- a/trunk/js/blogslideshow.css
+++ b/trunk/js/blogslideshow.css
@@ -13,6 +13,8 @@
     #ss-sprite {
         z-index: auto;
         position: absolute;
+        -moz-box-shadow: 5px 5px 5px #444;
+        -webkit-box-shadow: 5px 5px 5px #444;
     }
     #ss-mask { 
         z-index: auto;
@@ -67,5 +69,5 @@
         float: left;
         width: 10%;
         height: 100%;
-        background-repeat: no-repeat;
+        background-repeat: no-repeat;        
     }
